exo: Fix stuck keys with wayland clients

Remove a key from the pressed keys map in the DidProcessEvent call as
in addition to the existing removal in OnKeyEvent. When IME is
active, then sometimes DidProcessEvent gets invoked before OnKeyEvent,
and when that happens we end up with a stuck key in the pressed keys
map.

Bug: 840155
Test: exo_unitests --gtest_filter=SeatTest.PressedKeys
Change-Id: I54bbaaeb5656b4ece8cd10f8b5f7065ddad33813
Reviewed-on: https://chromium-review.googlesource.com/c/1373010
Commit-Queue: Jeffrey Kardatzke <jkardatzke@google.com>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616084}
Former-commit-id: 23e30de532011d1bed9ec8d4615f3590d3e180d3