components/exo/seat.cc
@@ -125,8 +125,16 @@ void Seat::WillProcessEvent(const ui::PlatformEvent& event) {
 void Seat::DidProcessEvent(const ui::PlatformEvent& event) {
   switch (ui::EventTypeFromNative(event)) {
     case ui::ET_KEY_PRESSED:
-    case ui::ET_KEY_RELEASED:
       physical_code_for_currently_processing_event_ = ui::DomCode::NONE;
+      break;
+    case ui::ET_KEY_RELEASED:
+      // Remove this from the pressed key map because when IME is active we can
+      // end up getting the DidProcessEvent call before we get the OnKeyEvent
+      // callback and then the key will end up being stuck pressed.
+      if (physical_code_for_currently_processing_event_ != ui::DomCode::NONE) {
+        pressed_keys_.erase(physical_code_for_currently_processing_event_);
+        physical_code_for_currently_processing_event_ = ui::DomCode::NONE;
+      }
       break;
     default:
       break;
